--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,11 +1,15 @@
-
+p{
+  font-size: 1rem;
+}
 
 @media screen and (min-width: 768px){
 
 }
 
 @media screen and (min-width: 1024px){
-
+  p{
+    font-size: 1.2rem;
+  }
 }
 
 @media screen and (min-width: 1280px){
