--- a/src/components/Intro/styles.module.css
+++ b/src/components/Intro/styles.module.css
@@ -73,3 +73,42 @@
      /* Highlight sutil */
 
 }
+
+/* Estilos responsivos para pantallas menores de 1024px */
+@media screen and (max-width: 1023px) {
+  .sphere {
+    width: 800px;
+    height: 800px;
+    left: calc(50% - 400px);
+    bottom: -600px;
+    box-shadow: 
+      0px -20px 60px rgba(241, 202, 255, 0.4),
+      inset -0px -0px 100px rgba(255, 255, 255, 0.5);
+  }
+}
+
+/* Estilos para pantallas menores de 768px */
+@media screen and (max-width: 767px) {
+  .sphere {
+    width: 600px;
+    height: 600px;
+    left: calc(50% - 300px);
+    bottom: -450px;
+    box-shadow: 
+      0px -15px 40px rgba(241, 202, 255, 0.35),
+      inset -0px -0px 80px rgba(255, 255, 255, 0.4);
+  }
+}
+
+/* Estilos para pantallas menores de 480px */
+@media screen and (max-width: 479px) {
+  .sphere {
+    width: 400px;
+    height: 400px;
+    left: calc(50% - 200px);
+    bottom: -300px;
+    box-shadow: 
+      0px -10px 30px rgba(241, 202, 255, 0.3),
+      inset -0px -0px 60px rgba(255, 255, 255, 0.35);
+  }
+}
