--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Solución robusta para overflow en móviles */
+html {
+  
+  /* Previene el bounce scroll en iOS */
+  -webkit-overflow-scrolling: touch;
+  /* Mejora el scroll en móviles */
+  scroll-behavior: smooth;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -33,6 +42,9 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  max-width: 100vw;
+  overflow-x: hidden;
+  /* Asegura que no exceda el ancho del viewport */
 }
 
 button {
@@ -76,3 +88,10 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+
+@media screen and (min-width: 640px) {
+  /* Estilos para dispositivos con un ancho mínimo de 640px */
+  html{
+    overflow-x: hidden;
+  }
+}
