--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -100,4 +100,13 @@ button:focus-visible {
 
 }
 
+/* Utilidades personalizadas */
+.line-clamp-3 {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
 
